src/views/ContactView/ContactView.css
.main-div {
  display: grid;
  grid-template-columns: 1fr 1fr;
  width: 100%;
  height: 100%;
  color: black;
  top: 0;
  left: 0;
  overflow: hidden;
}

.main-left {
  display: flex;
  justify-content: start;
  align-items: start;
  flex-direction: column;
  width: 50vw;
  background-color: #f0f0f0;
}

.main-left h1 {
  margin-left: 16vw;
  font-size: 6vh;
  color: #f8d1bc;
}

.description {
  margin-left: 1vw;
  margin-top: 4vh;
  font-size: 2vh;
}

.contact-data {
  margin-left: 2vw;
  margin-top: 2vh;
  font-size: 1.8vh;
  font-family: "fredoka";
}

.main-right {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  width: 50vw;
  background-color: #e0e0e0;
  padding: 3vh;
}

.formdiv-field {
  margin-left: 2vw;
  margin-top: 1.5vh;
  font-family: "Fredoka";
}

.contact-form {
  width: 100%;
  max-width: 45vw;
  padding-top: 20vh;
}

.contact-form input,
.contact-form textarea {
  width: 45vw;
  padding: 2vh;
  border: 0.3vh solid #ddd;
  border-radius: 1vh;
  font-size: 2vh;
  outline: none;
  transition: border 0.3s ease;
  box-sizing: border-box;
  font-family: "Fredoka";
}

.contact-form input:focus,
.contact-form textarea:focus {
  border-color: #ff5b68;
}

.contact-form textarea {
  height: 30vh;
  resize: none;
}

.contact-form button {
  background: #ff5b68;
  color: white;
  font-size: 2vh;
  font-weight: bold;
  margin-left: 4vh;
  padding: 1vh 1vw;
  border: none;
  border-radius: 1vh;
  cursor: pointer;
  transition: background 0.3s ease;
  width: 45vw;
  font-family: "Fredoka";
}

.contact-form button:hover {
  background: #ff2537;
}

/* RESPONSIVE */
@media (max-width: 800px) {
  .main-div {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto auto;
    min-height: 100vh;
    width: 100vw;
    overflow-x: hidden;
  }

  .main-left,
  .main-right {
    width: 100%;
    height: 100%;
    margin: auto;
  }

  .main-left {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding-left: 0vw;
  }

  .main-left h1 {
    margin-top: 2vh;
    margin-left: 0;
  }

  .description {
    margin-top: 0;
    margin-left: 0;
    width: 90%;
  }

  .main-right {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding: 3vh;
    box-sizing: border-box;
    width: 102vw;
  }

  .contact-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    padding-top: 0;
  }

  .contact-form input,
  .contact-form button {
    width: 95vw;
    margin: 1vh auto;
  }
  .contact-form textarea {
    width: 95vw;
    height: 24vh;
  }
  .contact-form button {
    width: 100%;
    max-width: 95vw;
    margin: 1vh 0;
    padding: 1vh;
    box-sizing: border-box;
  }
}

